--- a/app/styles/spore.scss
+++ b/app/styles/spore.scss
@@ -44,52 +44,52 @@
   @media (min-width: 992px) {
     #spore-style-tile-carousel {
       #style-tile-organic #organic-info-dot-1 {
-        top: 100px;
-        right: 100px;
+        top: 180px;
+        right: 700px;
       }
       #style-tile-organic #organic-info-dot-2 {
-        top: 200px;
-        right: 200px;
+        top: 220px;
+        right: 530px;
       }
       #style-tile-organic #organic-info-dot-3 {
-        top: 300px;
-        right: 300px;
+        top: 180px;
+        right: 180px;
       }
       #style-tile-organic #organic-info-dot-4 {
-        top: 400px;
-        right: 400px;
+        top: 510px;
+        right: 230px;
       }
       #style-tile-modern #modern-info-dot-1 {
-        top: 100px;
-        right: 100px;
+        top: 140px;
+        right: 720px;
       }
       #style-tile-modern #modern-info-dot-2 {
-        top: 200px;
-        right: 200px;
+        top: 180px;
+        right: 600px;
       }
       #style-tile-modern #modern-info-dot-3 {
-        top: 300px;
-        right: 300px;
+        top: 210px;
+        right: 220px;
       }
       #style-tile-modern #modern-info-dot-4 {
-        top: 400px;
-        right: 400px;
-      }
-      #style-tile-playful #playful-info-dot-1 {
-        top: 100px;
-        right: 100px;
-      }
-      #style-tile-playful #playful-info-dot-2 {
-        top: 200px;
+        top: 520px;
         right: 200px;
       }
+      #style-tile-playful #playful-info-dot-1 {
+        top: 220px;
+        right: 700px;
+      }
+      #style-tile-playful #playful-info-dot-2 {
+        top: 450px;
+        right: 755px;
+      }
       #style-tile-playful #playful-info-dot-3 {
-        top: 300px;
-        right: 300px;
+        top: 70px;
+        right: 80px;
       }
       #style-tile-playful #playful-info-dot-4 {
-        top: 400px;
-        right: 400px;
+        top: 270px;
+        right: 200px;
       }
     }
     .initial-designs {
@@ -97,47 +97,47 @@
         position: relative;
       }
       #initial-design-1-info-dot-1 {
-        top: 0px;
-        right: 10px;
+        top: 10px;
+        right: 130px;
       }
       #initial-design-1-info-dot-2 {
-        top: 100px;
-        right: 100px;
+        top: 180px;
+        right: 60px;
       }
       #initial-design-1-info-dot-3 {
-        top: 10px;
-        right: 10px;
+        top: 25px;
+        right: 20px;
       }
       #initial-design-1-info-dot-4 {
-        top: 10px;
+        top: 180px;
         right: 10px;
       }
       #initial-design-1-info-dot-5 {
-        top: 10px;
+        top: 25px;
         right: 10px;
       }
       #initial-design-1-info-dot-6 {
-        top: 10px;
-        right: 10px;
+        top: 60px;
+        right: 15px;
       }
       #initial-design-2-info-dot-1 {
-        top: 10px;
-        right: 10px;
+        top: 120px;
+        right: 130px;
       }
       #initial-design-2-info-dot-2 {
-        top: 10px;
-        right: 10px;
+        top: -10px;
+        right: 35px;
       }
       #initial-design-2-info-dot-3 {
-        top: 10px;
+        top: 180px;
         right: 10px;
       }
       #initial-design-2-info-dot-4 {
-        top: 10px;
-        right: 10px;
+        top: 220px;
+        right: 20px;
       }
       #initial-design-2-info-dot-5 {
-        top: 10px;
+        top: 20px;
         right: 10px;
       }
     }
