--- a/app/styles/ubergo.scss
+++ b/app/styles/ubergo.scss
@@ -84,44 +84,44 @@
   @media (min-width: $screen-md-min) {
     #ubergo-style-tiles {
       #contemporary-info-dot-1 {
-        top: 100px;
-        right: 100px;
+        top: 275px;
+        right: 580px;
       }
       #contemporary-info-dot-2 {
-        top: 200px;
-        right: 200px;
+        top: 450px;
+        right: 550px;
       }
       #contemporary-info-dot-3 {
-        top: 300px;
+        top: 130px;
         right: 300px;
       }
       #contemporary-info-dot-4 {
-        top: 400px;
-        right: 400px;
+        top: 300px;
+        right: 250px;
       }
       #spirited-info-dot-1 {
-        top: 100px;
-        right: 100px;
+        top: 250px;
+        right: 620px;
       }
       #spirited-info-dot-2 {
-        top: 200px;
-        right: 200px;
+        top: 70px;
+        right: 450px;
       }
       #spirited-info-dot-3 {
-        top: 300px;
-        right: 300px;
+        top: 280px;
+        right: 290px;
       }
       #hip-info-dot-1 {
-        top: 100px;
-        right: 100px;
+        top: 125px;
+        right: 625px;
       }
       #hip-info-dot-2 {
-        top: 200px;
-        right: 200px;
+        top: 390px;
+        right: 510px;
       }
       #hip-info-dot-3 {
-        top: 300px;
-        right: 300px;
+        top: 180px;
+        right: 190px;
       }
     }
     .ux-images {
