--- a/app/styles/wine.scss
+++ b/app/styles/wine.scss
@@ -17,33 +17,33 @@
         // four in here
         #init-design-info-dot-1 {
           top: 100px;
-          right: 100px;
+          right: 350px;
         }
         #init-design-info-dot-2 {
           top: 200px;
-          right: 200px;
+          right: 25px;
         }
         #init-design-info-dot-3 {
-          top: 300px;
-          right: 300px;
+          top: 420px;
+          right: 100px;
         }
         #init-design-info-dot-4 {
-          top: 400px;
-          right: 400px;
+          top: 530px;
+          right: 310px;
         }
       }
       &#initial-design-2 {
         #init-design-info-dot-5 {
-          top: 100px;
-          right: 100px;
+          top: 30px;
+          right: 360px;
         }
         #init-design-info-dot-6 {
-          top: 200px;
-          right: 200px;
+          top: 35px;
+          right: 150px;
         }
         #init-design-info-dot-7 {
-          top: 300px;
-          right: 300px;
+          top: 500px;
+          right: 70px;
         }
       }
     }
@@ -92,12 +92,12 @@
     
     #mobile-wine-carousel-4 {
       #style-tile-rustic #rustic-info-dot-1 {
-        top: 100px;
-        right: 100px;
+        top: 110px;
+        right: 620px;
       }
       #style-tile-rustic #rustic-info-dot-2 {
-        top: 200px;
-        right: 200px;
+        top: 420px;
+        right: 235px;
       }
       #style-tile-rustic #rustic-info-dot-3 {
         top: 300px;
@@ -105,39 +105,39 @@
       }
       #style-tile-rustic #rustic-info-dot-4 {
         top: 400px;
-        right: 400px;
+        right: 50px;
       }
       #style-tile-mediterranean #med-info-dot-1 {
-        top: 100px;
-        right: 100px;
+        top: 150px;
+        right: 780px;
       }
       #style-tile-mediterranean #med-info-dot-2 {
-        top: 200px;
-        right: 200px;
-      }
-      #style-tile-mediterranean #med-info-dot-3 {
         top: 300px;
         right: 300px;
       }
+      #style-tile-mediterranean #med-info-dot-3 {
+        top: 150px;
+        right: 40px;
+      }
       #style-tile-mediterranean #med-info-dot-4 {
-        top: 400px;
-        right: 400px;
+        top: 450px;
+        right: 200px;
       }
       #style-tile-friendly #friendly-info-dot-1 {
-        top: 100px;
-        right: 100px;
+        top: 150px;
+        right: 650px;
       }
       #style-tile-friendly #friendly-info-dot-2 {
-        top: 200px;
+        top: 290px;
         right: 200px;
       }
       #style-tile-friendly #friendly-info-dot-3 {
-        top: 300px;
-        right: 300px;
+        top: 500px;
+        right: 845px;
       }
       #style-tile-friendly #friendly-info-dot-4 {
-        top: 400px;
-        right: 400px;
+        top: 100px;
+        right: 100px;
       }
     }
     .non-carousel-row {
